@@ -3,6 +3,9 @@ package com.lingframe.core.router;
 import com.lingframe.core.kernel.InvocationContext;
 import com.lingframe.core.plugin.PluginInstance;
 import com.lingframe.core.spi.TrafficRouter;
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.Comparator;
@@ -23,7 +26,7 @@ public class LabelMatchRouter implements TrafficRouter {
         // 如果没有请求标签
         if (requestLabels == null || requestLabels.isEmpty()) {
             if (candidates.size() == 1) {
-                return candidates.getFirst();
+                return candidates.get(0);
             }
             // 尝试权重路由
             return doWeightedRoute(candidates);
@@ -35,7 +38,7 @@ public class LabelMatchRouter implements TrafficRouter {
                 .filter(si -> si.score >= 0) // 过滤掉不匹配的 (score = -1)
                 .max(Comparator.comparingInt(si -> si.score))
                 .map(si -> si.instance)
-                .orElse(candidates.getFirst());
+                .orElse(candidates.get(0));
     }
 
     private PluginInstance doWeightedRoute(List<PluginInstance> candidates) {
@@ -50,7 +53,7 @@ public class LabelMatchRouter implements TrafficRouter {
         }
 
         if (totalWeight <= 0) {
-            return candidates.getFirst();
+            return candidates.get(0);
         }
 
         int random = java.util.concurrent.ThreadLocalRandom.current().nextInt(totalWeight);
@@ -61,7 +64,7 @@ public class LabelMatchRouter implements TrafficRouter {
                 return candidates.get(i);
             }
         }
-        return candidates.getFirst();
+        return candidates.get(0);
     }
 
     private int getWeight(PluginInstance instance) {
@@ -98,6 +101,14 @@ public class LabelMatchRouter implements TrafficRouter {
         return score;
     }
 
-    private record ScoredInstance(PluginInstance instance, int score) {
+    @Value
+    @Getter(AccessLevel.NONE)  // 不生成标准 getter
+    public class ScoredInstance {
+        PluginInstance instance;
+        int score;
+
+        // Record 风格的访问器
+        public PluginInstance instance() { return instance; }
+        public int score() { return score; }
     }
 }
